deployment/iptables/rules.v4
# Generated by xtables-save v1.8.2 on Sun Apr 11 14:50:50 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

## INPUT: traffic destinated for this host
# Permit incoming echo request
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
# Permit incoming SSH
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
# Permit incoming MQTT from LAN interface
-A INPUT -p tcp -m tcp --dport 1883 -i eth0 -j ACCEPT
# Permit established connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
# Otherwise reject
-A INPUT -j REJECT --reject-with icmp-port-unreachable

## FORWARD: traffic routed by this host
# Permit for
-A FORWARD -s 192.168.60.0/24 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-port-unreachable

COMMIT
# Completed on Sun Apr 11 14:50:50 2021

# Generated by xtables-save v1.8.2 on Sun Apr 11 14:50:50 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -s 192.168.60.0/24 -o eth0.100 -j MASQUERADE
COMMIT
# Completed on Sun Apr 11 14:50:50 2021
